--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
             </p>
             <ul>
                 <li>
-                    <a href="#" class="header__telegram"></a>
+                    <a href="https://t.me/+79227980196" class="header__telegram"></a>
                 </li>
                 <li>
-                    <a href="#" class="header__whatsapp"></a>
+                    <a href="https://wa.me/+79227980196" class="header__whatsapp"></a>
                 </li>
                 <li>
                     <a href="#" class="header__viber"></a>
@@ -125,7 +125,7 @@
                     </div>
                 </div>
                 <div class="opportunities__card">
-                    <div class="opportunities__card__img--freeclients">
+                    <div class="opportunities__card__img--load">
                     </div>
                     <div class="opportunities__card__left">
                         <h3>
@@ -554,10 +554,10 @@
                 </a>
                 <ul class="contacts__links">
                     <li>
-                        <a href="#" class="contacts__links__telegram"></a>
+                        <a href="https://t.me/+79227980196" class="contacts__links__telegram"></a>
                     </li>
                     <li>
-                        <a href="#" class="contacts__links__whatsapp"></a>
+                        <a href="https://wa.me/+79227980196" class="contacts__links__whatsapp"></a>
                     </li>
                     <li>
                         <a href="#" class="contacts__links__viber"></a>
@@ -924,10 +924,10 @@
             </p>
             <ul>
                 <li>
-                    <a href="#" class="header__telegram"></a>
+                    <a href="https://t.me/+79227980196" class="header__telegram"></a>
                 </li>
                 <li>
-                    <a href="#" class="header__whatsapp"></a>
+                    <a href="https://wa.me/+79227980196" class="header__whatsapp"></a>
                 </li>
                 <li>
                     <a href="#" class="header__viber"></a>
