--- a/index.html
+++ b/index.html
@@ -72,12 +72,20 @@
         </section>
     </div>
     <section class="mockup">
-        <img src="./img/mockups.png" class="mockups__img" alt="Мокап сайта медицинского учреждения Хеликс">
+        <div class="mockup__container">
+            <img src="./img/mockups.png" class="mockups__img" alt="Мокап сайта медицинского учреждения Хеликс">
+        </div>
+        <div class="mockup__mobile">
+            <img src="./img/Desktop.png" class="mockups__desktop" alt="Мокап сайта медицинского учреждения Хеликс">
+            <img src="./img/Mobile.png" class="mockups__mobile" alt="Мокап сайта медицинского учреждения Хеликс">
+            <img src="./img/Tablet.png" class="mockups__tablet" alt="Мокап сайта медицинского учреждения Хеликс">
+            
+        </div>
     </section>
     <section class="opportunities">
         <div class="opportunities__container">
             <h2>
-                Технические возможности “Хеликс-Про”
+                Технические возможности <nobr>“Хеликс-Про”</nobr>
             </h2>
             <div class="opportunities__list">
                 <div class="opportunities__card">
@@ -540,7 +548,7 @@
             </p>
         </div>
     </section>
-    <section class="contacts">
+    <!-- <section class="contacts">
         <div class="contacts__container">
             <div class="contacts__text">
                 <h2>
@@ -916,7 +924,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <footer class="footer__background">
         <div class="footer__container">
             <p>
