--- a/index.html
+++ b/index.html
@@ -548,34 +548,36 @@
             </p>
         </div>
     </section>
-    <!-- <section class="contacts">
-        <div class="contacts__container">
-            <div class="contacts__text">
-                <h2>
-                    Контакты для связи
-                </h2>
-                <p>
-                    Свяжитесь с нами, обсудим все детали Дмитрий, менеджер по продажам
-                </p>
-                <a href="tel:" class="contacts__tel">
-                    +7(922) 798-01-96
-                </a>
-                <ul class="contacts__links">
-                    <li>
-                        <a href="https://t.me/+79227980196" class="contacts__links__telegram"></a>
-                    </li>
-                    <li>
-                        <a href="https://wa.me/+79227980196" class="contacts__links__whatsapp"></a>
-                    </li>
-                    <li>
-                        <a href="#" class="contacts__links__viber"></a>
-                    </li>
-                </ul>
+    <section class="contacts">
+        <div class="contacts__padding">
+            <div class="contacts__container">
+                <div class="contacts__text">
+                    <h2>
+                        Контакты для связи
+                    </h2>
+                    <p>
+                        Свяжитесь с нами, обсудим все детали. Дмитрий, менеджер по продажам
+                    </p>
+                    <a href="tel:" class="contacts__tel">
+                        +7(922) 798-01-96
+                    </a>
+                    <ul class="contacts__links">
+                        <li>
+                            <a href="https://t.me/+79227980196" class="contacts__links__telegram"></a>
+                        </li>
+                        <li>
+                            <a href="https://wa.me/+79227980196" class="contacts__links__whatsapp"></a>
+                        </li>
+                        <li>
+                            <a href="#" class="contacts__links__viber"></a>
+                        </li>
+                    </ul>
+                </div>
+                <img src="./img/contacts_img.png" class="contacts__img" alt="Дмитрий, менеджер по продажам">
             </div>
-            <img src="./img/contacts_img.png" class="contacts__img" alt="Дмитрий, менеджер по продажам">
         </div>
     </section>
-    <section class="example__background">
+    <!-- <section class="example__background">
         <div class="example__container">
             <div class="example__txt">
                 <div class="example__ourwork">
