--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
                 <img src="./img/after_promotion.png" class="example__img__after" alt="После продвижения">
             </div>
         </div>
-    </section>
+    </section> -->
     <section class="rate">
         <div class="rate__container">
             <h2 class="rate__head">
@@ -654,9 +654,8 @@
                         <span class="rate__txt__decoration">
                             *
                         </span>
-                        Разработка такого проекта с нуля стоит около <span class="rate__txt__decoration__price">400
-                            000₽</span>, мы продаём готовое решение всего за <span
-                            class="rate__txt__decoration__price">155 000₽</span> в случае покупки любого из тарифов
+                        Разработка такого проекта с нуля стоит около <span class="rate__txt__decoration__price"><nobr>400 000₽</nobr></span>, мы продаём готовое решение всего за <span
+                            class="rate__txt__decoration__price"><nobr>155 000₽</nobr></span> в случае покупки любого из тарифов
                     </p>
                     <div class="rate__price__bottom">
                         <span class="rate__price__bottom__new">
@@ -738,6 +737,19 @@
                             </p>
                         </li>
                     </ul>
+                </div>
+                <div class="rate__price__bottom__mob">
+                    <span class="rate__price__bottom__new">
+                        155 000₽
+                    </span>
+                    <span class="rate__price__bottom__old__container">
+                        <span class="rate__price__bottom__old">
+                            400 000₽
+                        </span>
+                        <span class="rate__txt__decoration">
+                            *
+                        </span>
+                    </span>
                 </div>
             </div>
             <div class="rate__list__container">
@@ -926,7 +938,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <footer class="footer__background">
         <div class="footer__container">
             <p>
