--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Промо-сайт медицинского портала услуг “Хеликс”</title>
+    <link rel="icon" href="./img/favicon.png" type="image/png">
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -45,13 +46,13 @@
             </p>
             <ul>
                 <li>
-                    <a href="https://t.me/+79227980196" class="header__telegram"></a>
+                    <a target="_blank" href="https://t.me/+79227980196" class="header__telegram"></a>
                 </li>
                 <li>
-                    <a href="https://wa.me/+79227980196" class="header__whatsapp"></a>
+                    <a target="_blank" href="https://wa.me/+79227980196" class="header__whatsapp"></a>
                 </li>
                 <li>
-                    <a href="#" class="header__viber"></a>
+                    <a target="_blank" href="viber://contact?number=%2B79227980196" class="header__viber"></a>
                 </li>
                 <li>
                     <a href="tel:+79227980196" class="header__tel">
@@ -79,7 +80,7 @@
             <img src="./img/Desktop.png" class="mockups__desktop" alt="Мокап сайта медицинского учреждения Хеликс">
             <img src="./img/Mobile.png" class="mockups__mobile" alt="Мокап сайта медицинского учреждения Хеликс">
             <img src="./img/Tablet.png" class="mockups__tablet" alt="Мокап сайта медицинского учреждения Хеликс">
-            
+
         </div>
     </section>
     <section class="opportunities">
@@ -548,7 +549,7 @@
             </p>
         </div>
     </section>
-    <section class="contacts">
+    <section class="contacts" id="contacts">
         <div class="contacts__padding">
             <div class="contacts__container">
                 <div class="contacts__text">
@@ -558,18 +559,18 @@
                     <p>
                         Свяжитесь с нами, обсудим все детали. Дмитрий, менеджер по продажам
                     </p>
-                    <a href="tel:" class="contacts__tel">
+                    <a href="tel:+79227980196" class="contacts__tel">
                         +7(922) 798-01-96
                     </a>
                     <ul class="contacts__links">
                         <li>
-                            <a href="https://t.me/+79227980196" class="contacts__links__telegram"></a>
+                            <a target="_blank" href="https://t.me/+79227980196" class="contacts__links__telegram"></a>
                         </li>
                         <li>
-                            <a href="https://wa.me/+79227980196" class="contacts__links__whatsapp"></a>
+                            <a target="_blank" href="https://wa.me/+79227980196" class="contacts__links__whatsapp"></a>
                         </li>
                         <li>
-                            <a href="#" class="contacts__links__viber"></a>
+                            <a target="_blank" href="viber://contact?number=%2B79227980196" class="contacts__links__viber"></a>
                         </li>
                     </ul>
                 </div>
@@ -577,7 +578,7 @@
             </div>
         </div>
     </section>
-    <!-- <section class="example__background">
+    <section class="example__background">
         <div class="example__container">
             <div class="example__txt">
                 <div class="example__ourwork">
@@ -594,7 +595,8 @@
                         До того как мы взялись за этот проект бла бла бла
                         было мало, а именно бла бла бла <span class="example__decoration--one">10 000 посетителей</span>
                         У этого были минусы: малая загруженность врачей, низкие доходы клиники и т.д.
-
+                    </p>
+                    <p class="example__ourwork__txt">
                         После того как мы сделали всё от концепции до реализации и настройки всего трафика, клиника
                         вышла на более <span class="example__decoration--two">250 000 посетителей в месяц</span>
                     </p>
@@ -626,7 +628,7 @@
                             </p>
                         </div>
                     </div>
-                    <a href="#" class="contact__link">
+                    <a href="#contacts" class="contact__link contact__link__width">
                         СВЯЗАТЬСЯ С НАМИ
                     </a>
                 </div>
@@ -636,7 +638,7 @@
                 <img src="./img/after_promotion.png" class="example__img__after" alt="После продвижения">
             </div>
         </div>
-    </section> -->
+    </section>
     <section class="rate">
         <div class="rate__container">
             <h2 class="rate__head">
@@ -654,8 +656,11 @@
                         <span class="rate__txt__decoration">
                             *
                         </span>
-                        Разработка такого проекта с нуля стоит около <span class="rate__txt__decoration__price"><nobr>400 000₽</nobr></span>, мы продаём готовое решение всего за <span
-                            class="rate__txt__decoration__price"><nobr>155 000₽</nobr></span> в случае покупки любого из тарифов
+                        Разработка такого проекта с нуля стоит около <span class="rate__txt__decoration__price">
+                            <nobr>400 000₽</nobr>
+                        </span>, мы продаём готовое решение всего за <span class="rate__txt__decoration__price">
+                            <nobr>155 000₽</nobr>
+                        </span> в случае покупки любого из тарифов
                     </p>
                     <div class="rate__price__bottom">
                         <span class="rate__price__bottom__new">
@@ -788,7 +793,7 @@
                             9 000₽
                         </span>
                     </div>
-                    <a href="#" class="contact__link">
+                    <a href="#contacts" class="contact__link">
                         СВЯЗАТЬСЯ С НАМИ
                     </a>
                 </div>
@@ -851,7 +856,7 @@
                             18 000₽
                         </span>
                     </div>
-                    <a href="#" class="contact__link">
+                    <a href="#contacts" class="contact__link">
                         СВЯЗАТЬСЯ С НАМИ
                     </a>
                 </div>
@@ -932,7 +937,7 @@
                             67 000₽
                         </span>
                     </div>
-                    <a href="#" class="contact__link">
+                    <a href="#contacts" class="contact__link">
                         СВЯЗАТЬСЯ С НАМИ
                     </a>
                 </div>
@@ -946,13 +951,13 @@
             </p>
             <ul>
                 <li>
-                    <a href="https://t.me/+79227980196" class="header__telegram"></a>
+                    <a target="_blank" href="https://t.me/+79227980196" class="header__telegram"></a>
                 </li>
                 <li>
-                    <a href="https://wa.me/+79227980196" class="header__whatsapp"></a>
+                    <a target="_blank" href="https://wa.me/+79227980196" class="header__whatsapp"></a>
                 </li>
                 <li>
-                    <a href="#" class="header__viber"></a>
+                    <a target="_blank" href="viber://contact?number=%2B79227980196" class="header__viber"></a>
                 </li>
                 <li>
                     <a href="tel:+79227980196" class="footer__tel">
