--- a/index.html
+++ b/index.html
@@ -657,8 +657,7 @@
                             *
                         </span>
                         Разработка такого проекта с нуля стоит около <span class="rate__txt__decoration__price">
-                            <nobr>400 000₽</nobr>
-                        </span>, мы продаём готовое решение всего за <span class="rate__txt__decoration__price">
+                            <nobr>400 000₽</span>,</nobr> мы продаём готовое решение всего за <span class="rate__txt__decoration__price">
                             <nobr>155 000₽</nobr>
                         </span> в случае покупки любого из тарифов
                     </p>
