--- a/index.html
+++ b/index.html
@@ -1925,7 +1925,7 @@
                         СВЯЗАТЬСЯ С НАМИ
                     </a>
                 </div>
-                <div class="rate__start rate__basis">
+                <div class="rate__start">
                     <p class="rate__basis__head">
                         Тариф
                     </p>
