--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="main__background">
         <header class="header">
-            <a target="_blank" href="https://a1-reklama.ru/">
+            <a target="_blank" href="https://a1-reklama.ru/" aria-label="Сайт А1 Интернет эксперт">
                 <svg class="header__logo" width="160" height="60" viewBox="0 0 160 60" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd"
@@ -48,13 +48,13 @@
             </p>
             <ul>
                 <li>
-                    <a target="_blank" href="https://t.me/+79227980196" class="header__telegram"></a>
+                    <a target="_blank" href="https://t.me/+79227980196" class="header__telegram" aria-label="Ссылка на Telegram"></a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://wa.me/+79227980196" class="header__whatsapp"></a>
+                    <a target="_blank" href="https://wa.me/+79227980196" class="header__whatsapp" aria-label="Ссылка на WhatsApp"></a>
                 </li>
                 <li>
-                    <a target="_blank" href="viber://contact?number=%2B79227980196" class="header__viber"></a>
+                    <a target="_blank" href="viber://contact?number=%2B79227980196" class="header__viber" aria-label="Ссылка на Viber"></a>
                 </li>
                 <li>
                     <a href="tel:+79227980196" class="header__tel">
@@ -1628,14 +1628,13 @@
                     </a>
                     <ul class="contacts__links">
                         <li>
-                            <a target="_blank" href="https://t.me/+79227980196" class="contacts__links__telegram"></a>
+                            <a target="_blank" href="https://t.me/+79227980196" class="contacts__links__telegram" aria-label="Ссылка на Telegram"></a>
                         </li>
                         <li>
-                            <a target="_blank" href="https://wa.me/+79227980196" class="contacts__links__whatsapp"></a>
+                            <a target="_blank" href="https://wa.me/+79227980196" class="contacts__links__whatsapp" aria-label="Ссылка на WhatsApp"></a>
                         </li>
                         <li>
-                            <a target="_blank" href="viber://contact?number=%2B79227980196"
-                                class="contacts__links__viber"></a>
+                            <a target="_blank" href="viber://contact?number=%2B79227980196" class="contacts__links__viber" aria-label="Ссылка на Viber"></a>
                         </li>
                     </ul>
                 </div>
@@ -2016,13 +2015,13 @@
             </p>
             <ul>
                 <li>
-                    <a target="_blank" href="https://t.me/+79227980196" class="header__telegram"></a>
+                    <a target="_blank" href="https://t.me/+79227980196" class="header__telegram" aria-label="Ссылка на Telegram"></a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://wa.me/+79227980196" class="header__whatsapp"></a>
+                    <a target="_blank" href="https://wa.me/+79227980196" class="header__whatsapp" aria-label="Ссылка на WhatsApp"></a>
                 </li>
                 <li>
-                    <a target="_blank" href="viber://contact?number=%2B79227980196" class="header__viber"></a>
+                    <a target="_blank" href="viber://contact?number=%2B79227980196" class="header__viber" aria-label="Ссылка на Viber"></a>
                 </li>
                 <li>
                     <a href="tel:+79227980196" class="footer__tel">
