--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
             </p>
             <ul>
                 <li>
-                    <a target="_blank" href="https://t.me/+79227980196" class="header__telegram" aria-label="Ссылка на Telegram"></a>
+                    <a target="_blank" href="https://t.me/+79227980196" class="header__telegram" aria-label="На Telegram"></a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://wa.me/+79227980196" class="header__whatsapp" aria-label="Ссылка на WhatsApp"></a>
+                    <a target="_blank" href="https://wa.me/+79227980196" class="header__whatsapp" aria-label="На WhatsApp"></a>
                 </li>
                 <li>
-                    <a target="_blank" href="viber://contact?number=%2B79227980196" class="header__viber" aria-label="Ссылка на Viber"></a>
+                    <a target="_blank" href="viber://contact?number=%2B79227980196" class="header__viber" aria-label="На Viber"></a>
                 </li>
                 <li>
                     <a href="tel:+79227980196" class="header__tel">
@@ -1628,13 +1628,13 @@
                     </a>
                     <ul class="contacts__links">
                         <li>
-                            <a target="_blank" href="https://t.me/+79227980196" class="contacts__links__telegram" aria-label="Ссылка на Telegram"></a>
+                            <a target="_blank" href="https://t.me/+79227980196" class="contacts__links__telegram" aria-label="На Telegram"></a>
                         </li>
                         <li>
-                            <a target="_blank" href="https://wa.me/+79227980196" class="contacts__links__whatsapp" aria-label="Ссылка на WhatsApp"></a>
+                            <a target="_blank" href="https://wa.me/+79227980196" class="contacts__links__whatsapp" aria-label="На WhatsApp"></a>
                         </li>
                         <li>
-                            <a target="_blank" href="viber://contact?number=%2B79227980196" class="contacts__links__viber" aria-label="Ссылка на Viber"></a>
+                            <a target="_blank" href="viber://contact?number=%2B79227980196" class="contacts__links__viber" aria-label="На Viber"></a>
                         </li>
                     </ul>
                 </div>
@@ -2015,13 +2015,13 @@
             </p>
             <ul>
                 <li>
-                    <a target="_blank" href="https://t.me/+79227980196" class="header__telegram" aria-label="Ссылка на Telegram"></a>
+                    <a target="_blank" href="https://t.me/+79227980196" class="header__telegram" aria-label="На Telegram"></a>
                 </li>
                 <li>
-                    <a target="_blank" href="https://wa.me/+79227980196" class="header__whatsapp" aria-label="Ссылка на WhatsApp"></a>
+                    <a target="_blank" href="https://wa.me/+79227980196" class="header__whatsapp" aria-label="На WhatsApp"></a>
                 </li>
                 <li>
-                    <a target="_blank" href="viber://contact?number=%2B79227980196" class="header__viber" aria-label="Ссылка на Viber"></a>
+                    <a target="_blank" href="viber://contact?number=%2B79227980196" class="header__viber" aria-label="На Viber"></a>
                 </li>
                 <li>
                     <a href="tel:+79227980196" class="footer__tel">
