--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
             <img src="./img/mockups.png" class="mockups__img" alt="Мокап сайта медицинского учреждения Хеликс">
         </div>
         <div class="mockup__mobile">
-            <img src="./img/Desktop.png" class="mockups__desktop" alt="Мокап сайта медицинского учреждения Хеликс">
+            <!-- <img src="./img/Desktop.png" class="mockups__desktop" alt="Мокап сайта медицинского учреждения Хеликс">
             <img src="./img/Mobile.png" class="mockups__mobile" alt="Мокап сайта медицинского учреждения Хеликс">
-            <img src="./img/Tablet.png" class="mockups__tablet" alt="Мокап сайта медицинского учреждения Хеликс">
-
+            <img src="./img/Tablet.png" class="mockups__tablet" alt="Мокап сайта медицинского учреждения Хеликс"> -->
+            <img src="./img/MockupsMobile.png" class="mockups__desktop" alt="Мокап сайта медицинского учреждения Хеликс">
         </div>
     </section>
     <section class="opportunities">
