--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </ul>
         </header>
         <section class="description">
-            <img src="./img/logo_helix.png" class="description__logo--helix"
+            <img src="./img/logo_helix.svg" class="description__logo--helix"
                 alt="Логотип медицинского учреждения Хеликс">
             <h1>
                 ГОТОВЫЙ СЕРВИС ДЛЯ ВЛАДЕЛЬЦЕВ ФРАНШИЗЫ
