--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                             выдачи поисковиков Яндекс и Google.
                         </p>
                         <p>
-                            За счет работ со справочниками вы получаете больше бесплатных клиентов с отзывиков и
+                            За счет работ со справочниками, вы получаете больше бесплатных клиентов с отзывиков и
                             справочников типа 2ГИС
                         </p>
                     </div>
@@ -473,8 +473,8 @@
                             Помогаем маркетологу или Директору получить современный маркетинг за счет подключения и
                             четкой работы всех систем аналитики
                             и всех каналов digital рекламы.<br>
-                            Экономим ваши затраты на рекламу. Подключаем весь аресенал от Яндекс Метрики до сквозной
-                            аналитики. Берем подконтроль почти все
+                            Экономим ваши затраты на рекламу. Подключаем весь арсенал от Яндекс Метрики до сквозной
+                            аналитики. Берем под контроль почти всё
                         </p>
                     </div>
                     <div class="opportunities__card__img--promotion">
@@ -998,7 +998,7 @@
                         </h3>
                         <p>
                             Мы передаём вам больше потенциальных
-                            и целевых клиентов с конкретными запросами
+                            и целевых клиентов с конкретными запросами,
                             тем самым облегчая работу администратора
                             и сокращая расходы клиники
                         </p>
@@ -1240,7 +1240,7 @@
                             Получение бесплатного, так называемого “органического” трафика в максимальном объеме.
                         </p>
                         <p>
-                            Достигается за счет проработки каталога услуг чтобы под каждую услугу клиники была целевая
+                            Достигается за счет проработки каталога услуг, чтобы под каждую услугу клиники была целевая
                             страница и работой с поисковыми “роботами” Яндекса и Google.
                         </p>
                         <p class="opportunities__seo__txt">
@@ -1598,13 +1598,13 @@
                     </p>
                     <div class="benefits__hover">
                         <p>
-                            Сервис сделан так что бы было удобно работать как большим сетевым так и маленьким клиникам.
+                            Сервис сделан так что бы было удобно работать как большим сетевым, так и маленьким клиникам.
                         </p>
                     </div>
                 </div>
             </div>
             <p class="benefits__bottom--txt">
-                И самое главное, мы сделали всё что-бы вы могли зарабатывать больше. В “Хеликс-Про” собрано всё что
+                И самое главное, мы сделали всё что-бы вы могли зарабатывать больше. В “Хеликс-Про” собрано всё, что
                 нужно для современного маркетинга
             </p>
         </div>
@@ -1617,7 +1617,7 @@
                         Контакты для связи
                     </h2>
                     <p>
-                        Свяжитесь с нами, обсудим все детали. Дмитрий, менеджер по продажам
+                        Свяжитесь с нами, обсудим все детали. Дмитрий, директор по развитию
                     </p>
                     <a href="tel:+79227980196" class="contacts__tel">
                         +7(922) 798-01-96
@@ -1637,7 +1637,7 @@
                         </li>
                     </ul>
                 </div>
-                <img src="./img/contacts_img.png" class="contacts__img" alt="Дмитрий, менеджер по продажам">
+                <img src="./img/contacts_img.png" class="contacts__img" alt="Дмитрий, директор по развитию">
             </div>
         </div>
     </section>
@@ -1655,13 +1655,14 @@
                         Показываем наши результаты на примере кейса с клиники “Наджа”
                     </p>
                     <p class="example__ourwork__txt">
-                        До того как мы взялись за этот проект бла бла бла
-                        было мало, а именно бла бла бла <span class="example__decoration--one">10 000 посетителей</span>
-                        У этого были минусы: малая загруженность врачей, низкие доходы клиники и т.д.
+                        До того как мы взялись за этот проект у сайта и сети клиник было мало посетителей.
+                        К примеру в месяц на сайт заходило <span class="example__decoration--one">10 000
+                            посетителей</span>
+                        Следовательно: малая загруженность врачей, низкие доходы клиник и так далее.
                     </p>
                     <p class="example__ourwork__txt">
                         После того как мы сделали всё от концепции до реализации и настройки всего трафика, клиника
-                        вышла на более <span class="example__decoration--two">250 000 посетителей в месяц</span>
+                        вышла на более <span class="example__decoration--two">205 000 посетителей в месяц</span>
                     </p>
                 </div>
                 <div class="example__get">
@@ -1747,7 +1748,7 @@
                         <li>
                             <span class="rate__include__icon"></span>
                             <p>
-                                Приобретение Лицензии 1с Битрикс (основа для сайта)
+                                Приобретение Лицензии 1С Битрикс (основа для сайта)
                             </p>
                         </li>
                         <li>
@@ -2087,104 +2088,82 @@
     </section>
     <section class="about">
         <div class="about__container">
-            <p class="about__title">
-                Кому доверить свой проект?
-            </p>
-            <h2 class="about__head">Выбирайте лучших:</h2>
+
+            <p class="about__head">
+                О нас
+                </з>
+            <h2 class="about__title">
+                Компания А1 Интернет Эксперт
+            </h2>
+
             <p class="about__slogan">
-                Золотой сертифицированный партнер 1С-Битрикс, лучшей системы управления сайтами в СНГ. Единственное
-                агентство в ХМАО и ЯНАО, сертифицированное Яндексом.
+                Любим и умеем работать с медицинской тематикой. Умеем работать со всеми самыми современными системами
+                аналитики, рекламы и маркетинга.
             </p>
             <div class="about__achievements">
-
-
-                <!-- <div class="swiper">
-                    <div class="about__achievements__left swiper-wrapper">
-                        <div class="swiper-slide progress__tile">
+                <div class="swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide progress__title">
                             <strong class="progress__value">8 лет </strong>
                             <p class="progress__text">
-                                опыта в создании <br>
-                                и продвижении сайтов
+                                в разработке медицинских сайтов
                             </p>
                         </div>
-                        <div class="swiper-slide progress__tile">
+                        <div class="swiper-slide progress__title">
                             <strong class="progress__value">200+</strong>
                             <p class="progress__text">
-                                проектов в Сургуте, Тюмени <br>
-                                и других городах
-                            </p>
-                        </div>
-                        <div class="swiper-slide progress__tile">
-                            <strong class="progress__value">1 место </strong>
-                            <p class="progress__text">
-                                ежегодного рейтинга <br>
-                                веб-студий Сургута
-                            </p>
-                        </div>
-                        <div class="swiper-slide progress__tile">
-                            <strong class="progress__value">120+</strong>
-                            <p class="progress__text">
-                                клиентов на абонентском <br>
-                                обслуживании
+                                разработанных проектов
                             </p>
                         </div>
                     </div>
-                    <div class="swiper-button-prev"></div>
-                    <div class="swiper-button-next"></div>
-                </div> -->
+                    <div class="swiper__button__container">
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-button-next"></div>
+                    </div>
+                </div>
 
 
                 <div class="about__achievements__left">
-                    <div class="progress__tile">
+                    <div class="progress__title">
                         <strong class="progress__value">8 лет </strong>
                         <p class="progress__text">
-                            опыта в создании <br>
-                            и продвижении сайтов
+                            в разработке медицинских сайтов
                         </p>
                     </div>
-                    <div class="progress__tile">
+                    <div class="progress__title">
                         <strong class="progress__value">200+</strong>
                         <p class="progress__text">
-                            проектов в Сургуте, Тюмени <br>
-                            и других городах
-                        </p>
-                    </div>
-                    <div class="progress__tile">
-                        <strong class="progress__value">1 место </strong>
-                        <p class="progress__text">
-                            ежегодного рейтинга <br>
-                            веб-студий Сургута
-                        </p>
-                    </div>
-                    <div class="progress__tile">
-                        <strong class="progress__value">120+</strong>
-                        <p class="progress__text">
-                            клиентов на абонентском <br>
-                            обслуживании
+                            разработанных проектов
                         </p>
                     </div>
                 </div>
 
+                <h2 class="about__head">Официальные партнеры:</h2>
 
                 <div class="about__achievements__right">
                     <a href="https://www.1c-bitrix.ru/partners/321338.php" target="_blank" rel="noopener"
                         class="partners__item" style="opacity: 1;"> <img alt="Bitrix" src="./img/bitrix.png"
                             class="partners__logo" title="">
-                        <p class="partners__tooltip partners__tooltip__top">
-                            Золотой сертифицированный партнер 1С-Битрикс, лучшей системы управления сайтами в
-                            СНГ.
-                        </p>
-                        <span class="partners__toggler">?</span>
+                        <!-- <span class="partners__toggler">?</span> -->
                     </a>
                     <a href="https://yandex.ru/adv/contact/agency/partner?url=a1-reklama.ru&amp;countries%5B%5D=225&amp;cities%5B%5D=973"
                         target="_blank" rel="noopener" class="partners__item" style="opacity: 1;"> <img alt="Yandex"
-                            src="./img/yandex.png" class="partners__logo" title="">
-                        <p class="partners__tooltip">
-                            Единственное агентство в ХМАО и ЯНАО, сертифицированное Яндексом. Подтверждаем
-                            статус ежегодно с 2012 г.
-                        </p>
-                        <span class="partners__toggler">?</span>
+                            src="./img/yandex2021.png" class="partners__logo" title="">
+                        <!-- <span class="partners__toggler">?</span> -->
                     </a>
+                    <a class="about__link__container" href="https://yandex.ru/adv/contact/agency/partner?url=a1-reklama.ru&amp;countries%5B%5D=225&amp;cities%5B%5D=973">
+                        <img src="./img/certified_agency.svg" alt="Сертифицированное агентство" />
+                        <div>
+                            <p>
+                                Агентство
+                            </p>
+                            <p>
+                                Сертифицировано Яндексом
+                            </p>
+                        </div>
+                    </a>
+
+
                 </div>
             </div>
         </div>
